[package]
name = "ably"
version = "0.1.0"
edition = "2021"
description = "Ably client library SDK"
documentation = "https://docs.rs/ably"
readme = "README.md"
homepage = "https://ably.com"
repository = "https://github.com/ably/ably-rust"
license = "Apache-2.0"
keywords = ["ably", "realtime", "pubsub"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
aes = "0.8.1"
atty = "0.2.14"
base64 = "0.13.0"
block-modes = "0.9.1"
cipher = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
dyn-clone = "1.0.5"
futures = "0.3.21"
hmac = "0.12.1"
lazy_static = "1.4.0"
mime = "0.3.16"
rand = "0.8.5"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
rmp-serde = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
serde_repr = "0.1.8"
sha2 = "0.10.2"
url = "2.2.2"
cbc = "0.1.2"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["full"] }
