[package]
name = "ably"
version = "0.1.0"
edition = "2021"
description = "Ably client library SDK"
documentation = "https://docs.rs/ably"
readme = "README.md"
homepage = "https://ably.com"
repository = "https://github.com/ably/ably-rust"
license = "Apache-2.0"
keywords = ["ably", "realtime", "pubsub"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
aes = "0.7.5"
atty = "0.2.14"
base64 = "0.13.0"
block-modes = "0.8.1"
cipher = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
dyn-clone = "1.0.4"
futures = "0.3.21"
hmac = "0.12.0"
lazy_static = "1.4.0"
mime = "0.3.16"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
rmp-serde = "0.15.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.78"
serde_repr = "0.1.7"
sha2 = "0.10.1"
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["full"] }
